nlp - gendered pronoun resolution - Kernel : Top3 NLP Libraries Tutorials - by 2.5

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,5 @@
 *.csv
 *.txt
 nlp/Bag-of-Words-Meets-Bags-of-Popcorn/Overview/300features_40minwords_10context
+nlp/gendered-pronoun-resolution/input/test_stage_2.tsv
+nlp/gendered-pronoun-resolution/input/test_stage_1.tsv
