NLP - Jigsaw - Transcription - NB01 : Keras baseline LSTM Attention 5fold - error...

--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,5 @@ nlp/gendered-pronoun-resolution/input/test_stage_2.tsv
 nlp/gendered-pronoun-resolution/input/test_stage_1.tsv
 nlp/Bag-of-Words-Meets-Bags-of-Popcorn/notebook/transcription/NB03_trigrams_model.wv.vectors.npy
 nlp/Bag-of-Words-Meets-Bags-of-Popcorn/notebook/transcription/NB03_trigrams_model.trainables.syn1neg.npy
+nlp/Jigsaw-Unintended-Bias-in-Toxicity-Classification/input/fasttext-crawl-300d-2m/crawl-300d-2M.vec
+nlp/Jigsaw-Unintended-Bias-in-Toxicity-Classification/input/fasttext-crawl-300d-2m/embedding-model-sample.vec
